--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 <body>
   <div class="pageContainer">
     <div class="sidebar">
-      <img class="dash" src="dash.svg" alt="dashboard img">
-      <span class="dash">Dashboard</span>
-
-      <img class="home" src="home.svg" alt="home img"><span class="home">Home</span>
-      <img src="profile.svg" alt="profile img"><span>Profile</span>
-      <img src="messages.svg" alt="message img"><span>Messages</span>
-      <img src="history.svg" alt="history img"><span>History</span>
-      <img src="tasks.svg" alt="tasks img"><span>Tasks</span>
-      <img class="communities" src="communities.svg" alt="communities img"><span class="communities">Communities</span>
-      
-      <img src="settings.svg" alt="settings img"><span>Settings</span>
-      <img src="support.svg" alt="support img"><span>Support</span>
-      <img src="privacy.svg" alt="privacy img"><span>Privacy</span>
+      <div class="container">
+        <div class="dash"><img src="dash.svg" alt="dashboard img">
+        Dashboard</div>
+        <ul>
+          <li><img src="home.svg" alt="home img">Home</li>
+          <li><img src="profile.svg" alt="profile img">Profile</li>
+          <li><img src="messages.svg" alt="message img">Messages</li>
+          <li><img src="history.svg" alt="history img">History</li>
+          <li><img src="tasks.svg" alt="tasks img">Tasks</li>
+          <li><img src="communities.svg" alt="communities img">Communities</li>
+        </ul>
+        <ul>
+          <li><img src="settings.svg" alt="settings img">Settings</li>
+          <li><img src="support.svg" alt="support img">Support</li>
+          <li><img src="privacy.svg" alt="privacy img">Privacy</li>
+        </ul>
+      </div>
     </div>
     <div class="header">
       head
