feat: header layout

--- a/index.html
+++ b/index.html
@@ -12,22 +12,44 @@
         <div class="dash"><img src="dash.svg" alt="dashboard img">
         Dashboard</div>
         <ul>
-          <li><img src="home.svg" alt="home img">Home</li>
-          <li><img src="profile.svg" alt="profile img">Profile</li>
-          <li><img src="messages.svg" alt="message img">Messages</li>
-          <li><img src="history.svg" alt="history img">History</li>
-          <li><img src="tasks.svg" alt="tasks img">Tasks</li>
-          <li><img src="communities.svg" alt="communities img">Communities</li>
+          <li><img src="home.svg" alt="home">Home</li>
+          <li><img src="profile.svg" alt="profile">Profile</li>
+          <li><img src="messages.svg" alt="message">Messages</li>
+          <li><img src="history.svg" alt="history">History</li>
+          <li><img src="tasks.svg" alt="tasks">Tasks</li>
+          <li><img src="communities.svg" alt="communities">Communities</li>
         </ul>
         <ul>
-          <li><img src="settings.svg" alt="settings img">Settings</li>
-          <li><img src="support.svg" alt="support img">Support</li>
-          <li><img src="privacy.svg" alt="privacy img">Privacy</li>
+          <li><img src="settings.svg" alt="settings">Settings</li>
+          <li><img src="support.svg" alt="support">Support</li>
+          <li><img src="privacy.svg" alt="privacy">Privacy</li>
         </ul>
       </div>
     </div>
     <div class="header">
-      head
+      <div class="row one">
+        <div class="container">
+          <div class="search"></div>
+          <img src="magnify.svg" alt="search">
+        </div>
+        <div class="container profile">
+          <img src="bell.svg" alt="alerts">
+          <img class="profilePic" src="turtle.png" alt="profile pic">
+          <span class="name">Cody Riebel</span>
+        </div>
+      </div>
+      <div class="row two">
+        <img class="profilePic" src="turtle.png" alt="profile pic">
+        <div class="welcome">
+          <span>Hi there,</span>
+          <span>Cody Riebel (@cody)</span>
+        </div>
+        <div class="container buttons">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
     </div>
     <div class="main">
       main
