feat: main layout

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <div class="search"></div>
           <img src="magnify.svg" alt="search">
         </div>
-        <div class="container profile">
+        <div class="notification container">
           <img src="bell.svg" alt="alerts">
-          <img class="profilePic" src="turtle.png" alt="profile pic">
+          <img class="profilePic" src="profilepic.svg" alt="profile pic">
           <span class="name">Cody Riebel</span>
         </div>
       </div>
       <div class="row two">
-        <img class="profilePic" src="turtle.png" alt="profile pic">
+        <img class="profilePic" src="profilepic.svg" alt="profile pic">
         <div class="welcome">
           <span>Hi there,</span>
           <span>Cody Riebel (@cody)</span>
@@ -52,7 +52,127 @@
       </div>
     </div>
     <div class="main">
-      main
+      <div class="projects">
+        <span>Your Projects</span>
+        <div class="cards">
+          <div class="card">
+            <div class="text">
+              <h4>Super Cool Project</h4>
+              <p>Integer pharetra, magna a varius sodales, enim velit tempus ligula, in tempus enim sapien non purus.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h4>Less Cool Project</h4>
+              <p>Fusce a augue non metus tincidunt lobortis. In rutrum id risus sit amet interdum.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h4>Impossible App</h4>
+              <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis dignissim sem nec orci imperdiet tempus.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h4>Easy Peasy App</h4>
+              <p>In quis eros at magna semper rutrum non eu tellus. Donec bibendum lectus vitae purus tincidunt, et viverra justo feugiat.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h4>Ad Blocker</h4>
+              <p>Pellentesque ultricies eros metus, vel dignissim augue tincidunt at.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h4>Money Maker</h4>
+              <p>Nulla justo nulla, placerat quis leo at, semper dignissim augue. Nunc rhoncus erat a elit lacinia dignissim.</p>
+            </div>
+            <div class="controls">
+              <img src="star.svg" alt="favorite">
+              <img src="eye.svg" alt="watch">
+              <img src="share.svg" alt="share">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rightCol">
+        <span>Announcements</span>
+        <div class="announcements">
+          <div class="container">
+            <h6>Site Maintenance</h6>
+            <p>Utiam dignissim pulvinar purus et lobortis. Praesent et cursus nibh, vel rutrum ipsum. Phasellus.</p>
+          </div>
+
+          <div class="container">
+            <h6>Community Share Day</h6>
+            <p>Suspendisse sollicitudin efficitur sollicitudin. Nullam dapibus pharetra augue varius elementum. Vestibulum tempus leo justo.</p>
+          </div>
+
+          <div class="container">
+            <h6>Updated Privacy Policy</h6>
+            <p>Curabitur iaculis magna ultrices eros commodo congue. Interdum et malesuada fames ac ante ipsum.</p>
+          </div>
+        </div>
+        <span>Trending</span>
+        <div class="trending">
+          <div class="profile">
+            <img src="avataaars.svg" alt="">
+            <div class="handleContainer">
+              <span class="at">@tegan</span>
+              <span class="title">World Peace Builder</span>
+            </div>
+          </div>
+          <div class="profile">
+            <img src="profilepic.svg" alt="">
+            <div class="handleContainer">
+              <span class="at">@cody</span>
+              <span class="title">Super Cool Project</span>
+            </div>
+          </div>
+          <div class="profile">
+            <img src="avataaars (1).svg" alt="">
+            <div class="handleContainer">
+              <span class="at">@kendall</span>
+              <span class="title">Life Changing App</span>
+            </div>
+          </div>
+          <div class="profile">
+            <img src="avataaars (2).svg" alt="">
+            <div class="handleContainer">
+              <span class="at">@alex</span>
+              <span class="title">No Traffic Maker</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
