--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 </head>
 <body>
   <div class="pageContainer">
-    <div class="sidebar">
-      <div class="container">
-        <div class="dash"><img src="dash.svg" alt="dashboard img">
-        Dashboard</div>
-        <ul>
-          <li><img src="home.svg" alt="home">Home</li>
-          <li><img src="profile.svg" alt="profile">Profile</li>
-          <li><img src="messages.svg" alt="message">Messages</li>
-          <li><img src="history.svg" alt="history">History</li>
-          <li><img src="tasks.svg" alt="tasks">Tasks</li>
-          <li><img src="communities.svg" alt="communities">Communities</li>
+    <div class="sidebar"> 
+        <ul class="dash">
+          <li><img src="dash.svg" alt="dashboard img"><span>Dashboard</span></li>
         </ul>
         <ul>
-          <li><img src="settings.svg" alt="settings">Settings</li>
-          <li><img src="support.svg" alt="support">Support</li>
-          <li><img src="privacy.svg" alt="privacy">Privacy</li>
+          <li><img src="home.svg" alt="home"><span>Home</span></li>
+          <li><img src="profile.svg" alt="profile"><span>Profile</span></li>
+          <li><img src="messages.svg" alt="message"><span>Messages</span></li>
+          <li><img src="history.svg" alt="history"><span>History</span></li>
+          <li><img src="tasks.svg" alt="tasks"><span>Tasks</span></li>
+          <li><img src="communities.svg" alt="communities"><span>Communities</span></li>
         </ul>
-      </div>
+        <ul>
+          <li><img src="settings.svg" alt="settings"><span>Settings</span></li>
+          <li><img src="support.svg" alt="support"><span>Support</span></li>
+          <li><img src="privacy.svg" alt="privacy"><span>Privacy</span></li>
+        </ul>
+      
     </div>
     <div class="header">
       <div class="row one">
@@ -41,7 +41,7 @@
       <div class="row two">
         <img class="profilePic" src="profilepic.svg" alt="profile pic">
         <div class="welcome">
-          <span>Hi there,</span>
+          <span class="hi">Hi there,</span>
           <span>Cody Riebel (@cody)</span>
         </div>
         <div class="container buttons">
@@ -53,7 +53,7 @@
     </div>
     <div class="main">
       <div class="projects">
-        <span>Your Projects</span>
+        <h3>Your Projects</h3>
         <div class="cards">
           <div class="card">
             <div class="text">
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="rightCol">
-        <span>Announcements</span>
+        <h3>Announcements</h3>
         <div class="announcements">
           <div class="container">
             <h6>Site Maintenance</h6>
@@ -141,7 +141,7 @@
             <p>Curabitur iaculis magna ultrices eros commodo congue. Interdum et malesuada fames ac ante ipsum.</p>
           </div>
         </div>
-        <span>Trending</span>
+        <h3>Trending</h3>
         <div class="trending">
           <div class="profile">
             <img src="avataaars.svg" alt="">
